--- a/app/views/adm/pages/catalog/layout/banners/imagegallery/index.twig
+++ b/app/views/adm/pages/catalog/layout/banners/imagegallery/index.twig
@@ -19,7 +19,7 @@
 						<table class="table table-striped">
 							<thead class="thead-dark">
 								<tr>
-									<th scope="col">Filtro</th>
+									<th scope="col">Tags</th>
 									<th scope="col">Imagem</th>
 									<th scope="col">Ação</th>
 								</tr>   
@@ -27,7 +27,7 @@
 							<tbody>
 								{% for image in images %}
 									<tr>
-										<td>{{image.image_filter}}</td>
+										<td>{{image.tags}}</td>
 										<td><img src="{{URL_BASE_IMAGE ~ image.image}}" width="100px"></td>
 										<td>
 											<a class="btn btn-info btn-sm" href="{{editroute}}{{image.id}}">
