--- a/app/views/institucional/modules/informative.twig
+++ b/app/views/institucional/modules/informative.twig
@@ -2,10 +2,8 @@
 <div id="contato">
 	<div class="email">
 		<img src="{{URL_BASE}}assets/institucional/images/paperplane.svg"/>
-		<h2 class="title text-center">Fique por dentro das novidades</h2>
-		<h4 class="subtitle text-center mb-4">
-			Et sumi kapa namur aondeai rocus pocus est talaraum
-		</h4>
+		<h2 class="title text-center">{{title}}</h2>
+		<h4 class="subtitle text-center mb-4">{{subtitle}}</h4>
 		<form>
 			<div class="flex-md-grow-1 pr-md-3 pb-md-0 pb-3">
 				<label for="email" class="sr-only">Password</label>
