#implementation# mode maintence for system, PageController.php for construct page based in seo, menus and submains for navbar

--- a/assets/institucional/css/blue/all.css
+++ b/assets/institucional/css/blue/all.css
@@ -12,3 +12,4 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css');
 @import url('https://cdn.jsdelivr.net/npm/sweetalert2@8.19.0/dist/sweetalert2.min.css');
 @import url('https://use.fontawesome.com/releases/v5.3.1/css/all.css');
+@import url('https://cdn.jsdelivr.net/gh/kmlpandey77/bootnavbar/css/bootnavbar.css');
