--- a/app/views/institucional/themes/blue/template.twig
+++ b/app/views/institucional/themes/blue/template.twig
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="DelphosAutomacao">
 
-		<link
-		rel="icon" href="{{URL_BASE}}assets/global/icons/icone.ico" type="image/x-icon">
+		{# <link
+		rel="icon" href="{{URL_BASE}}assets/global/icons/icone.ico" type="image/x-icon"> #}
 
 		<!-- Font Awesome -->
 		<link
