--- a/app/views/adm/pages/catalog/config/config/add.twig
+++ b/app/views/adm/pages/catalog/config/config/add.twig
@@ -25,17 +25,14 @@
 		</div>
 		<div class="tab-content" id="myTabContent">
 			<div class="tab-pane fade show active" id="geral" role="tabpanel" aria-labelledby="geral-tab">
-				<div class="row v-center mt-3">
-					<div class="col-xl-1 col-md-2 col-sm-12">
-						<img class="image-preview favicon" src="{{ config_site.favicon ? URL_BASE_IMAGE ~ config_site.favicon : image }}" width="100%" alt="">
+				<div class="row">
+					<div class="mt-3 mb-2 col-md-6">
+						<label for="sitename" class="form-label">Nome do site 1</label>
+						<input type="text" class="form-control" id="sitename1" name="sitename1" value="{{config_site.sitename1}}">
 					</div>
-					<div class="col-xl-11 col-md-10 col-sm-12">
-						<div class="input-group">
-							<input id="favicon" name="favicon" type="text" class="form-control" placeholder="Selecione o favicon do site" aria-label="Recipient's username" aria-describedby="button-addon2" value="{{config_site.favicon}}">
-							<a class="btn btn-outline-success filemaneger iframe-btn" href="{{DIALOG}}favicon" id="button-addon2">
-								<i class="fas fa-file-upload"></i>
-							</a>
-						</div>
+					<div class="mt-3 mb-2 col-md-6">
+						<label for="sitename" class="form-label">Nome do site 2</label>
+						<input type="text" class="form-control" id="sitename2" name="sitename2" value="{{config_site.sitename2}}">
 					</div>
 				</div>
 
@@ -45,7 +42,7 @@
 					</div>
 					<div class="col-xl-11 col-md-10 col-sm-12">
 						<div class="input-group">
-							<input id="logo" name="logo" type="text" class="form-control" placeholder="Selecione a logo do site" aria-label="Recipient's username" aria-describedby="button-addon2" value="{{config_site.logo}}">
+							<input id="logo" name="logo" type="text" class="form-control" placeholder="Selecione o logo do site" aria-label="Recipient's username" aria-describedby="button-addon2" value="{{config_site.logo}}">
 							<a class="btn btn-outline-success filemaneger iframe-btn" href="{{DIALOG}}logo" id="button-addon2">
 								<i class="fas fa-file-upload"></i>
 							</a>
@@ -53,76 +50,92 @@
 					</div>
 				</div>
 
+				<div class="row v-center mt-3">
+					<div class="col-xl-1 col-md-2 col-sm-12">
+						<img class="image-preview favicon" src="{{ config_site.favicon ? URL_BASE_IMAGE ~ config_site.favicon : image }}" width="100%" alt="">
+					</div>
+					<div class="col-xl-11 col-md-10 col-sm-12">
+						<div class="input-group">
+							<input id="favicon" name="favicon" type="text" class="form-control" placeholder="Selecione a favicon do site" aria-label="Recipient's username" aria-describedby="button-addon2" value="{{config_site.favicon}}">
+							<a class="btn btn-outline-success filemaneger iframe-btn" href="{{DIALOG}}favicon" id="button-addon2">
+								<i class="fas fa-file-upload"></i>
+							</a>
+						</div>
+					</div>
+				</div>
 
 				<div class="mt-3">
-					<label for="homepage_id" class="form-label">Selecione a pagina principal</label>
-					<select class="form-select" name="homepage_id" id="homepage_id">
-						<option selected disabled>Selecione uma opção</option>
-						{% for page in pages %}
-                               <option value="{{ page.id }}"{% if page.id == config_site.homepage_id %} selected="selected"{% endif %}>{{ page.description }}</option>
-							{#<option value="{{page.id}}">{{page.description}}</option>#}
-						{% endfor %}
+					<label for="brand" class="form-label">Logo image ou logo texto (nome do site)?</label>
+					<select class="form-select" name="brand" id="brand">
+						<option value="1" {% if 1 == config_site.brand %} selected="selected" {% endif %}>Logo image</option>
+						<option value="2" {% if 2 == config_site.brand %} selected="selected" {% endif %}>Logo text</option>
 					</select>
-				</div>
-
-                <div class="mt-3">
-					<label for="theme_id" class="form-label">Selecione o thema do site</label>
-					<select class="form-select" name="theme_id" id="theme_id">
-						{% for theme in themes %}
-                               <option value="{{ theme.id }}"{% if theme.id == config_site.theme_id %} selected="selected"{% endif %}>{{ theme.description }}</option>
-						{% endfor %}
-					</select>
-				</div>
+				</select>
 			</div>
 
-			<div class="tab-pane fade" id="contato" role="tabpanel" aria-labelledby="contato-tab">
-				<div class="mt-3 mb-2">
-					<label for="sitename" class="form-label">Nome do site</label>
-					<input type="text" class="form-control" id="sitename" name="sitename" value="{{config_site.sitename}}">
-				</div>
-
-				<div class="mb-2">
-					<label for="fone" class="form-label">Telefone para contato</label>
-					<input type="text" class="form-control" id="fone" name="fone" value="{{config_site.fone}}">
-				</div>
-
-				<div class="mb-2">
-					<label for="address" class="form-label">Endereço</label>
-					<textarea class="editor" name="address">{{config_site.address}}</textarea>
-				</div>
+			<div class="mt-3">
+				<label for="homepage_id" class="form-label">Selecione a pagina principal</label>
+				<select class="form-select" name="homepage_id" id="homepage_id">
+					<option selected disabled>Selecione uma opção</option>
+					{% for page in pages %}
+						<option value="{{ page.id }}" {% if page.id == config_site.homepage_id %} selected="selected" {% endif %}>{{ page.description }}</option>
+						{#<option value="{{page.id}}">{{page.description}}</option>#}
+					{% endfor %}
+				</select>
 			</div>
 
-			<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-				<div class="alert alert-warning mt-3" role="alert">
-					<p>As informações de email, são necessárias para que o site receba e envie emails de contato!</p>
-					<p>
-						<small>
-							Em caso de duvidas, contacte o desenvolverdor dev@gmail.com</small>
-					</p>
-				</div>
-
-				<div class="mb-2">
-					<label for="email" class="form-label">Endereço do email</label>
-					<input type="email" class="form-control" id="email" name="email" placeholder="meuemail@hotmail.com" value="{{config_site.email}}">
-				</div>
-
-				<div class="mb-2">
-					<label for="host" class="form-label">Host</label>
-					<input type="text" class="form-control" id="host" name="host" value="{{config_site.host}}">
-				</div>
-
-				<div class="mb-2">
-					<label for="port" class="form-label">Porta</label>
-					<input type="text" class="form-control" id="port" name="port" value="{{config_site.port}}">
-				</div>
-
-				<div class="mb-2">
-					<label for="password" class="form-label">Senha</label>
-					<input type="password" class="form-control" id="password" name="password" value="{{config_site.password}}">
-				</div>
-
+			<div class="mt-3">
+				<label for="theme_id" class="form-label">Selecione o thema do site</label>
+				<select class="form-select" name="theme_id" id="theme_id">
+					{% for theme in themes %}
+						<option value="{{ theme.id }}" {% if theme.id == config_site.theme_id %} selected="selected" {% endif %}>{{ theme.description }}</option>
+					{% endfor %}
+				</select>
 			</div>
 		</div>
-	</form>
-	{{js | raw}}
-{% endblock %}
+
+		<div class="tab-pane fade" id="contato" role="tabpanel" aria-labelledby="contato-tab">
+			<div class="mb-2">
+				<label for="fone" class="form-label">Telefone para contato</label>
+				<input type="text" class="form-control" id="fone" name="fone" value="{{config_site.fone}}">
+			</div>
+
+			<div class="mb-2">
+				<label for="address" class="form-label">Endereço</label>
+				<textarea class="editor" name="address">{{config_site.address}}</textarea>
+			</div>
+		</div>
+
+		<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+			<div class="alert alert-warning mt-3" role="alert">
+				<p>As informações de email, são necessárias para que o site receba e envie emails de contato!</p>
+				<p>
+					<small>
+						Em caso de duvidas, contacte o desenvolverdor dev@gmail.com</small>
+				</p>
+			</div>
+
+			<div class="mb-2">
+				<label for="email" class="form-label">Endereço do email</label>
+				<input type="email" class="form-control" id="email" name="email" placeholder="meuemail@hotmail.com" value="{{config_site.email}}">
+			</div>
+
+			<div class="mb-2">
+				<label for="host" class="form-label">Host</label>
+				<input type="text" class="form-control" id="host" name="host" value="{{config_site.host}}">
+			</div>
+
+			<div class="mb-2">
+				<label for="port" class="form-label">Porta</label>
+				<input type="text" class="form-control" id="port" name="port" value="{{config_site.port}}">
+			</div>
+
+			<div class="mb-2">
+				<label for="password" class="form-label">Senha</label>
+				<input type="password" class="form-control" id="password" name="password" value="{{config_site.password}}">
+			</div>
+
+		</div>
+	</div>
+</form>
+{{js | raw}}{% endblock %}
