--- a/app/views/adm/pages/catalog/config/config/index.twig
+++ b/app/views/adm/pages/catalog/config/config/index.twig
@@ -25,7 +25,7 @@
 							<tbody>
 								{% for config in configs %}
 									<tr>
-										<td>{{config.sitename}}</td>
+										<td>{{config.sitename1 ~ config.sitename2}}</td>
 										<td>
 											<a class="btn btn-info btn-sm" href="{{editroute}}{{config.id}}">
 												<i class="fas fa-pencil-alt"></i>
