--- a/app/views/institucional/themes/blue/header.twig
+++ b/app/views/institucional/themes/blue/header.twig
@@ -3,9 +3,11 @@
 		<nav class="navbar navbar-expand-lg navbar-light justify-content-between">
 			<a
 				class="navbar-brand" href="#">
-				{#<img src="{{URL_BASE}}assets/institucional/images/logo.svg" class="img-fluid"/>#}
-				<h1>Meu<span style="color:#0d6efd;">Site</span>
-				</h1>
+				{% if brand == 1%}
+						<img src="{{logoimage}}" class="img-fluid" width="120px"/>
+					{% else %}
+						<h1>{{logotext[0]}}<span style="color:#fc5185;">{{logotext[1]}}</span></h1>
+					{% endif %}
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-principal" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<i class="fas fa-bars"></i>
