--- a/app/views/institucional/themes/default/footer.twig
+++ b/app/views/institucional/themes/default/footer.twig
@@ -3,10 +3,12 @@
 	<div class="container">
 		<div class="logo py-4">
 			<div class="row">
-				<div
-					class="col-md-6 align-self-center text-md-left text-center">
-					{#<img src="{{URL_BASE}}assets/institucional/images/logo.svg" class="img-fluid"/>#}
-					<h1>Meu<span style="color:#fc5185;">Site</span></h1>
+				<div class="col-md-6 align-self-center text-md-left">
+					{% if brand == 1%}
+						<img src="{{logoimage}}" class="img-fluid" width="120px"/>
+					{% else %}
+						<h1>{{logotext[0]}}<span style="color:#fc5185;">{{logotext[1]}}</span></h1>
+					{% endif %}
 				</div>
 				<div class="col-md-6 align-self-center text-right">
 					<ul>
