--- a/app/views/institucional/themes/blue/header.twig
+++ b/app/views/institucional/themes/blue/header.twig
@@ -13,7 +13,8 @@
 				<i class="fas fa-bars"></i>
 			</button>
 			<div class="collapse navbar-collapse" id="nav-principal">
-				<ul class="navbar-nav ms-auto">
+			<ul class="navbar-nav">
+				{# <ul class="navbar-nav ms-auto"> #}
 					<li class="nav-item">
 						<a class="nav-link active" aria-current="page" href="#">MENU 1</a>
 					</li>
