--- a/app/views/institucional/themes/default/header.twig
+++ b/app/views/institucional/themes/default/header.twig
@@ -12,7 +12,8 @@
 				<i class="fas fa-bars"></i>
 			</button>
 			<div class="collapse navbar-collapse" id="nav-principal">
-				<ul class="navbar-nav ms-auto">
+			<ul class="navbar-nav ms-5">
+				{# <ul class="navbar-nav ms-auto"> #}
 					{% for menu in menus %}
 						{% if menu.children %}
 							<li class="nav-item dropdown">
