--- a/assets/institucional/css/blue/internal-css-files/custom.css
+++ b/assets/institucional/css/blue/internal-css-files/custom.css
@@ -281,3 +281,26 @@ body {
 .form-login {
     padding: 100px 0;
 }
+
+.paginator {
+  list-style: none;
+  padding: 0;
+  margin-top: 30px;
+}
+
+.paginator_item {
+  display: inline-block;
+  margin: 0 10px;
+  padding: 4px 12px;
+  background: #0d6efd;
+  color: #fff;
+  text-decoration: none;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  border-radius:4px;
+}
+
+.paginator_item:hover {
+  background: #0d6efd;
+  color: #fff; 
+}
