--- a/assets/institucional/css/default/internal-css-files/custom.css
+++ b/assets/institucional/css/default/internal-css-files/custom.css
@@ -339,3 +339,26 @@ body {
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px;
 }
+
+.paginator {
+  list-style: none;
+  padding: 0;
+  margin-top: 30px;
+}
+
+.paginator_item {
+  display: inline-block;
+  margin: 0 10px;
+  padding: 4px 12px;
+  background: #fc5185;
+  color: #fff;
+  text-decoration: none;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  border-radius:4px;
+}
+
+.paginator_item:hover {
+  background: #fc5185;
+  color: #fff; 
+}
